--- a/frontend/src/assets/styles/custom.css
+++ b/frontend/src/assets/styles/custom.css
@@ -88,6 +88,37 @@ h5 {
 .admin-left-side a:hover {
   color: #fff;
 }
+.admin-side-bar-height {
+  min-height: calc(100vh - 150px);
+}
+.admin-right-side-scroller {
+  overflow-y: auto;
+  height: calc(100vh - 150px);
+}
+
+/* *::-webkit-scrollbar-thumb {
+  background-color: rgba(117, 114, 114, 0.5);
+  border-radius: 6px; 
+}
+*::-webkit-scrollbar-track {
+  background: #3d3d3d8c;
+}
+*::-webkit-scrollbar {
+  width: 10px; 
+} */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
 .validation-error {
   color: red;
   float: right;
@@ -114,7 +145,7 @@ input:disabled {
   height: 20px;
 }
 .active-label {
-	padding-left: 10px;
+  padding-left: 10px;
 }
 .form-bold-header {
   font-weight: 600;
