--- a/frontend/src/assets/styles/custom.css
+++ b/frontend/src/assets/styles/custom.css
@@ -1,27 +1,27 @@
 /* Custom styles for the garage app */
 .signin-signout {
-  padding: 0 55px;
+	padding: 0 55px;
 }
 .signin-signout a {
-  color: #fff;
+	color: #fff;
 }
 /* Placeholder style */
 input::placeholder,
 textarea::placeholder {
-  font-weight: 400;
-  opacity: 0.3;
-  color: #000;
-  font-style: italic;
+	font-weight: 400;
+	opacity: 0.3;
+	color: #000;
+	font-style: italic;
 }
 /* Header */
 .main-header {
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 5px -2px,
-    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+	box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 5px -2px,
+		rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 /* home page */
 .banner {
-  background-image: url("../images/banner/banner.jpg");
+	background-image: url("../images/banner/banner.jpg");
 }
 /* .banner-section,
 h2,
@@ -30,70 +30,70 @@ h5 {
 	color:  !important;
 } */
 .why-choose-us .image img {
-  height: 422px !important;
+	height: 422px !important;
 }
 .auto-container {
-  z-index: 1;
-  /* color: yellow !important; */
+	z-index: 1;
+	/* color: yellow !important; */
 }
 
 .image {
-  margin-top: 0 !important;
+	margin-top: 0 !important;
 }
 
 .cta-section h3 {
-  font-size: 30px;
+	font-size: 30px;
 }
 /* Admin pages */
 .admin-left-side {
-  background-color: #222b48;
+	background-color: #222b48;
 }
 .admin-right-side {
-  background: rgb(246 247 250);
-  border-bottom: 1px solid #dfe2ec;
+	background: rgb(246 247 250);
+	border-bottom: 1px solid #dfe2ec;
 }
 .admin-menu {
-  background: #1e2331;
-  padding: 10px 20px;
+	background: #1e2331;
+	padding: 10px 20px;
 }
 .admin-left-side .list-group-item.active {
-  z-index: 2;
-  color: #fff;
-  background-color: #3c404c;
-  border-color: #3c404c;
-  border-bottom: 1px solid #616675;
+	z-index: 2;
+	color: #fff;
+	background-color: #3c404c;
+	border-color: #3c404c;
+	border-bottom: 1px solid #616675;
 }
 .admin-menu h2 {
-  font-size: 21px;
-  font-weight: 300;
-  line-height: 50px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: rgb(249, 249, 249);
-  display: block;
-  text-decoration: none;
+	font-size: 21px;
+	font-weight: 300;
+	line-height: 50px;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	color: rgb(249, 249, 249);
+	display: block;
+	text-decoration: none;
 }
 .admin-left-side.col-md-3 {
-  padding: 0;
+	padding: 0;
 }
 .admin-left-side .list-group-item {
-  background-color: #222b48;
-  border-bottom: 1px solid #616675;
-  margin-bottom: 0px;
-  color: #fff;
+	background-color: #222b48;
+	border-bottom: 1px solid #616675;
+	margin-bottom: 0px;
+	color: #fff;
 }
 .admin-left-side a {
-  color: #a2a5ad;
+	color: #a2a5ad;
 }
 .admin-left-side a:hover {
-  color: #fff;
+	color: #fff;
 }
 .admin-side-bar-height {
-  min-height: calc(100vh - 150px);
+	min-height: calc(100vh - 150px);
 }
 .admin-right-side-scroller {
-  overflow-y: auto;
-  height: calc(100vh - 150px);
+	overflow-y: auto;
+	height: calc(100vh - 150px);
 }
 
 /* *::-webkit-scrollbar-thumb {
@@ -107,278 +107,393 @@ h5 {
   width: 10px; 
 } */
 *::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 
 /* Track */
 *::-webkit-scrollbar-track {
-  background: #f1f1f1;
+	background: #f1f1f1;
 }
 
 /* Handle */
 *::-webkit-scrollbar-thumb {
-  background: #888;
+	background: #888;
 }
 .validation-error {
-  color: red;
-  float: right;
-  font-style: italic;
+	color: red;
+	float: right;
+	font-style: italic;
 }
 select.custom-select-box {
-  border-right: 25px solid #dddddd;
+	border-right: 25px solid #dddddd;
 }
 .edit-delete-icons a {
-  color: #0a1436;
-  padding: 0 10px;
+	color: #0a1436;
+	padding: 0 10px;
 }
 input:disabled {
-  background-color: #ecedef !important;
+	background-color: #ecedef !important;
 }
 .checkbox-in-form .form-check-label {
-  padding-left: 15px;
-  font-size: 1.3em;
-  font-weight: 300;
-  vertical-align: super;
+	padding-left: 15px;
+	font-size: 1.3em;
+	font-weight: 300;
+	vertical-align: super;
 }
 .checkbox-in-form input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
+	width: 20px;
+	height: 20px;
 }
 .active-label {
-  padding-left: 10px;
+	padding-left: 10px;
 }
 .form-bold-header {
-  font-weight: 600;
-  font-size: 1.5em;
+	font-weight: 600;
+	font-size: 1.5em;
 }
 /* Pagination */
 .pagination-wrapper {
-  margin-top: 30px;
+	margin-top: 30px;
 }
 .page-link {
-  padding: 0.5rem 1.75rem;
-  color: #fff;
-  background-color: #222b48;
-  border: 1px solid #dee2e6;
+	padding: 0.5rem 1.75rem;
+	color: #fff;
+	background-color: #222b48;
+	border: 1px solid #dee2e6;
 }
 .page-link:hover {
-  color: #ffffff;
-  background-color: #ee0c0a;
+	color: #ffffff;
+	background-color: #ee0c0a;
 }
 .page-link span {
-  padding: 0 5px;
+	padding: 0 5px;
 }
 /* Search */
 .search-box {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 .search-box input {
-  padding: 30px;
+	padding: 30px;
 }
 /* Table style */
 .table a {
-  color: #0a1436;
-  font-weight: 600;
+	color: #0a1436;
+	font-weight: 600;
 }
 /* Customer page */
 .history-block .text span {
-  font-weight: 600;
-  color: #000821;
+	font-weight: 600;
+	color: #000821;
 }
 
 /* Vehicles */
 .external-container {
-  padding: 50px;
-  background-color: #fff;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	padding: 50px;
+	background-color: #fff;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .contact-section .external-container .contact-title h2 {
-  font-size: 20px;
+	font-size: 20px;
 }
 .external-container .contact-form .theme-btn span {
-  color: #fff;
+	color: #fff;
 }
 .form-close {
-  color: red;
-  font-size: 1.5em;
-  margin-bottom: -3px;
-  text-align: end;
-  cursor: pointer;
+	color: red;
+	font-size: 1.5em;
+	margin-bottom: -3px;
+	text-align: end;
+	cursor: pointer;
 }
 .internal-form-wrapper {
-  width: 80%;
+	width: 80%;
 }
 .vehicles-wrapper {
-  padding: 0px;
-  background: #fff;
-  margin-bottom: 20px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	padding: 0px;
+	background: #fff;
+	margin-bottom: 20px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .inner-padding {
-  padding: 20px;
+	padding: 20px;
 }
 /* Services */
 .services-wrapper {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 .service-item {
-  background: #fff;
-  padding: 20px 20px 5px;
-  margin-bottom: 5px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	background: #fff;
+	padding: 20px 20px 5px;
+	margin-bottom: 5px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .service-item .edit-delete {
-  float: right;
-  padding: 0 10px;
-  position: relative;
-  z-index: 1;
+	float: right;
+	padding: 0 10px;
+	position: relative;
+	z-index: 1;
 }
 .service-item .edit-delete span {
-  padding: 15px;
+	padding: 15px;
 }
 .service-item h3 {
-  font-size: 1.5em;
-  font-weight: 600;
+	font-size: 1.5em;
+	font-weight: 600;
 }
 
 /* Order page */
 .faq-section.order-page .sear-form {
-  position: relative;
-  margin-bottom: 0px;
+	position: relative;
+	margin-bottom: 0px;
 }
 .order-page .search-box {
-  margin-bottom: 0px;
+	margin-bottom: 0px;
 }
 .filter-customers-wrapper {
-  padding: 20px;
-  background: #f8f8f8;
-  border: 1px solid #ced4da;
-  border-top: 0;
+	padding: 20px;
+	background: #f8f8f8;
+	border: 1px solid #ced4da;
+	border-top: 0;
 }
 .selected-customer {
-  padding: 20px;
-  background: #fff;
-  border: 1px solid #ced4da;
-  border-top: 0;
-  margin-bottom: 20px;
+	padding: 20px;
+	background: #fff;
+	border: 1px solid #ced4da;
+	border-top: 0;
+	margin-bottom: 20px;
 }
 .selected-customer h3 {
-  font-weight: 600;
+	font-weight: 600;
 }
 .vehicles-to-choose {
-  margin-top: 40px;
+	margin-top: 40px;
 }
 .service-item.checkbox-holder {
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 5px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 5px;
 }
 .checkbox-holder input[type="checkbox"] {
-  width: 40px;
-  height: 40px;
+	width: 40px;
+	height: 40px;
 }
 .theme-btn a {
-  color: #fff;
+	color: #fff;
 }
 .no-customer {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 .selected-customer .sec-title {
-  margin-bottom: 25px;
+	margin-bottom: 25px;
 }
 .selected-customer .form-close {
-  float: right;
+	float: right;
 }
 .selected-customer .text span {
-  color: #000821;
+	color: #000821;
 }
 .service-block-one .text span {
-  color: #000821;
+	color: #000821;
 }
 .contact-form input[type="number"] {
-  display: block;
-  width: 100%;
-  line-height: 28px;
-  height: 56px;
-  font-size: 16px;
-  padding: 10px 22px;
-  background: #ffffff;
-  color: #000000;
-  border: 1px solid #dddddd;
-  transition: all 500ms ease;
-  -webkit-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
+	display: block;
+	width: 100%;
+	line-height: 28px;
+	height: 56px;
+	font-size: 16px;
+	padding: 10px 22px;
+	background: #ffffff;
+	color: #000000;
+	border: 1px solid #dddddd;
+	transition: all 500ms ease;
+	-webkit-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
 }
 .single-order .service-block-one h2 {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 .order-status {
-  float: right;
+	float: right;
 }
 .order-status span {
-  padding: 10px 25px;
-  font-size: 1.2em;
-  font-weight: 400;
+	padding: 10px 25px;
+	font-size: 1.2em;
+	font-weight: 400;
 }
 .change-status {
-  cursor: pointer;
+	cursor: pointer;
 }
 /* Services */
 .Service-display {
-  display: flex;
-  width: 100%;
-  height: 80px;
-  box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
-  justify-content: space-between;
-  padding: 10px 20px;
+	display: flex;
+	width: 100%;
+	height: 80px;
+	box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
+	justify-content: space-between;
+	padding: 10px 20px;
 }
 .service p {
-  margin: 0;
-  font-size: 14px;
+	margin: 0;
+	font-size: 14px;
 }
 .service h6 {
-  margin: 0;
-  font-weight: bold;
-  color: #222b48;
+	margin: 0;
+	font-weight: bold;
+	color: #222b48;
 }
 .action {
-  align-items: center;
-  justify-content: end;
-  display: flex;
-  gap: 10px;
+	align-items: center;
+	justify-content: end;
+	display: flex;
+	gap: 10px;
 }
 .contact-title p {
-  font-size: 14px;
-  color: #616675;
+	font-size: 14px;
+	color: #616675;
 }
 .contact-title h2 {
-  font-size: 16px;
+	font-size: 16px;
 }
 .service-input {
-  width: 70%;
-  height: 40px;
-  border-radius: 1px;
-  padding: 5px 10px;
-  border: 1px solid #ccc; /* Added a border for initial state */
+	width: 70%;
+	height: 40px;
+	border-radius: 1px;
+	padding: 5px 10px;
+	border: 1px solid #ccc; /* Added a border for initial state */
 }
 
 .service-input:focus {
-  border-color: red; /* Change border color on focus */
-  outline: none; /* Optional: Remove default outline */
+	border-color: red; /* Change border color on focus */
+	outline: none; /* Optional: Remove default outline */
 }
 .add-service-cont {
-  box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
+	box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.2);
+	padding: 20px;
 }
 .large-textarea {
-  width: 70%; /* Full width */
-  height: 100px; /* Specific height */
-  padding: 10px; /* Padding for inner spacing */
-  font-size: 16px; /* Adjust font size if needed */
-  border: 1px solid #ccc; /* Border styling */
-  border-radius: 1px; /* Rounded corners */
-  resize: both; /* Allow resizing both vertically and horizontally */
+	width: 70%; /* Full width */
+	height: 100px; /* Specific height */
+	padding: 10px; /* Padding for inner spacing */
+	font-size: 16px; /* Adjust font size if needed */
+	border: 1px solid #ccc; /* Border styling */
+	border-radius: 1px; /* Rounded corners */
+	resize: both; /* Allow resizing both vertically and horizontally */
 }
 .large-textarea:focus {
-  border-color: red; /* Change border color on focus */
-  outline: none; /* Optional: Remove default outline */
+	border-color: red; /* Change border color on focus */
+	outline: none; /* Optional: Remove default outline */
+}
+
+/* customer profile */
+.content-container {
+	display: flex;
+	align-items: flex-start;
+	width: 80%;
+}
+
+.vertical-labels {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-right: 20px;
+	margin-top: 45px;
+	margin-left: 20px;
+}
+
+.label {
+	background-color: #ff3333;
+	color: white;
+	/* margin-bottom: 150px; */
+	border-radius: 50%;
+	text-align: center;
+	font-weight: bold;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-bottom: 3px solid gray;
+	/* height: 500px; */
+}
+.vl {
+	border: 2px solid rgb(236, 233, 233);
+	min-height: 30vh;
+}
+
+.content {
+	flex-grow: 1;
+	padding: 20px;
+}
+
+.customer-info,
+.vehicle-info,
+.orders-info {
+	/* background-color: white; */
+	padding: 20px;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+}
+.add-vehicle-input {
+	width: 60%;
+	background-color: white;
+	border: none;
+	height: 30px;
+	border-radius: 5px;
+
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.customer-info h2 {
+	font-size: 1.5em;
+	margin-bottom: 10px;
+}
+
+.customer-info p {
+	margin: 5px 0;
+}
+
+.edit-customer-btn {
+	display: inline-block;
+	margin-top: 10px;
+	background-color: #ff3333;
+	color: white;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.vehicle-info h3,
+.orders-info h3 {
+	font-size: 1.2em;
+	margin-bottom: 10px;
+}
+
+.vehicle-list {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.vehicle-list p {
+	margin: 0;
+	font-weight: bold;
+	color: #333;
+}
+
+.add-vehicle-btn {
+	background-color: #ff3333;
+	color: white !important;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	margin-top: 10px;
+}
+
+.edit-customer-link {
+	color: white !important;
+}
+.orders-info p {
+	margin: 0;
+	color: #666;
 }
