--- a/frontend/src/markup/components/Orders/css/Orders.module.css
+++ b/frontend/src/markup/components/Orders/css/Orders.module.css
@@ -1,60 +1,100 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-.boxes{
-    width: 95%;
-    height: auto;
-    padding: 20px;
-    /* background-color: gray; */
-    margin-bottom: 10px;
-    background-color: #fff;
-    /* background-color: gray; */
-    border: #F6F7FA 1px solid;
-    justify-content: flex;
-    position: relative;
+.boxes {
+  width: 95%;
+  height: auto;
+  padding: 20px;
+  /* background-color: gray; */
+  margin-bottom: 10px;
+  background-color: #fff;
+  /* background-color: gray; */
+  border: #f6f7fa 1px solid;
+  justify-content: flex;
+  position: relative;
 }
-.component{
-    background-color: #F6F7FA;
+.component {
+  background-color: #f6f7fa;
 }
 .smallboxes {
-    width: 95%;
-    border-bottom: #F6F7FA 1px solid;
-        box-shadow: -1px 0 5px rgba(0, 0, 0, 0.2);
-        padding: 15px;
-
+  width: 95%;
+  border-bottom: #f6f7fa 1px solid;
+  box-shadow: -1px 0 5px rgba(0, 0, 0, 0.2);
+  padding: 15px;
 }
-h2{
-    /* color: red; */
+h2 {
+  /* color: red; */
 }
 .textarea1 {
-    border: grey 1px solid;
-    padding: 15px;
-    width: 95%;
-    height: 20vh;
+  border: grey 1px solid;
+  padding: 15px;
+  width: 95%;
+  height: 20vh;
 }
 .textarea2 {
-    border: grey 1px solid;
-    padding: 15px;
-    width: 95%;
-    height: 7vh;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+  border: grey 1px solid;
+  padding: 15px;
+  width: 95%;
+  height: 7vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
 }
 .button {
-    margin-top: 30px;
+  margin-top: 30px;
 }
-.icon{
-    color: white;
-    background-color: red;
-    cursor: pointer;
-    /* padding-left: 90%; */
-    position: absolute;
+.icon {
+  color: white;
+  background-color: red;
+  cursor: pointer;
+  /* padding-left: 90%; */
+  position: absolute;
 }
 .position {
-    position: relative;
+  position: relative;
 }
 .absolute {
-    position: absolute;
-    left: 95%;
+  position: absolute;
+  left: 95%;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  backdrop-filter: blur(4px); /* Slight blur for background */
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.loader-dot {
+  width: 15px;
+  height: 15px;
+  margin: 0 5px;
+  background-color: #333;
+  border-radius: 50%;
+  animation: bounce 1.5s infinite ease-in-out;
+}
+
+.loader-dot:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.loader-dot:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+@keyframes bounce {
+  0%,
+  80%,
+  100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1);
+  }
 }
